--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -20,9 +20,9 @@
               [ngClass]="this.data ? 'col-md-2 col-material-name col-sm-6 col-xs-12' : 'col-md-3 col-sm-6 col-xs-12'">
               <mat-form-field class="border-input w-100">
                 <input type="text" placeholder="Material Name*" matInput formControlName="materialName" />
-                <small *ngIf="addMyMaterial.get('myMaterial')['controls'][i]['controls']['materialName'].errors?.maxlength" class="warning-color"
-                  >maximun characters allowed is 300</small
-                >
+                <small
+                  *ngIf="addMyMaterial.get('myMaterial')['controls'][i]['controls']['materialName'].errors?.maxlength"
+                  class="warning-color">maximun characters allowed is 300</small>
               </mat-form-field>
             </div>
 
@@ -32,15 +32,9 @@
                 <mat-label class="mat-select-trades">Unit*</mat-label>
                 <mat-select formControlName="materialUnit">
                   <div class="display-flex">
-                    <input
-                      class="p-l-10 p-b-5"
-                      matInput
-                      type="search"
-                      placeholder="Search Unit"
-                      [(ngModel)]="searchUnit"
-                      [ngModelOptions]="{standalone: true}"
-                      (keydown)="$event.stopPropagation()"
-                    />
+                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Unit"
+                      [(ngModel)]="searchUnit" [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()" />
                     <button mat-button mat-icon-button>
                       <mat-icon>search</mat-icon>
                     </button>
@@ -57,14 +51,16 @@
             <!-- Quantity Input Field -->
             <div *ngIf="this.data" class="col-md-2 col-sm-6 col-xs-7">
               <mat-form-field class="border-input w-100">
-                <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="Quantity*" />
+                <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text"
+                  placeholder="Quantity*" />
               </mat-form-field>
             </div>
 
             <!-- Unit Rate Input Field -->
             <div *ngIf="this.data" class="col-md-2 col-sm-6 col-xs-12 col-unit-rate">
               <mat-form-field class="border-input w-100">
-                <input formControlName="estimatedPrice" appTwoDigitDecimaNumber matInput type="text" placeholder="Unit Rate({{ this.currencyCode }})" />
+                <input formControlName="estimatedPrice" appTwoDigitDecimaNumber matInput type="text"
+                  placeholder="Unit Rate({{ this.currencyCode }})" />
               </mat-form-field>
             </div>
 
@@ -74,15 +70,9 @@
                 <mat-label>Trade*</mat-label>
                 <mat-select formControlName="trade">
                   <div class="display-flex">
-                    <input
-                      class="p-l-10 p-b-5"
-                      matInput
-                      type="search"
-                      placeholder="Search Trade"
-                      [(ngModel)]="searchTrade"
-                      [ngModelOptions]="{standalone: true}"
-                      (keydown)="$event.stopPropagation()"
-                    />
+                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Trade"
+                      [(ngModel)]="searchTrade" [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()" />
                     <button mat-button matSuffix mat-icon-button>
                       <mat-icon>search</mat-icon>
                     </button>
@@ -100,20 +90,15 @@
                 <mat-label>Category*</mat-label>
                 <mat-select formControlName="category">
                   <div class="display-flex">
-                    <input
-                      class="p-l-10 p-b-5"
-                      matInput
-                      type="search"
-                      placeholder="Search Category"
-                      [(ngModel)]="searchCategory"
-                      [ngModelOptions]="{standalone: true}"
-                      (keydown)="$event.stopPropagation()"
-                    />
+                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category"
+                      [(ngModel)]="searchCategory" [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()" />
                     <button mat-button mat-icon-button>
                       <mat-icon>search</mat-icon>
                     </button>
                   </div>
-                  <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:['categoriesName']" [value]="option" matTooltip=" {{ option.categoriesName }}">
+                  <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:['categoriesName']"
+                    [value]="option" matTooltip=" {{ option.categoriesName }}">
                     {{ option.categoriesName }}
                   </mat-option>
                 </mat-select>
@@ -122,18 +107,15 @@
 
             <!-- Add Button Field -->
             <div class="col-md-1 col-sm-12 col-xs-12 col-add-btn display-flex align-items-center justify-content-end">
-              <a href="javascript:void(0)" *ngIf="addMyMaterial.get('myMaterial').value.length > 1" class="width-15-px cursor-pointer" (click)="onDelete(i)">
+              <a href="javascript:void(0)" *ngIf="addMyMaterial.get('myMaterial').value.length > 1"
+                class="width-15-px cursor-pointer" (click)="onDelete(i)">
                 <img src="../../../../assets/images/delete-button.png" />
               </a>
 
-              <button
-                *ngIf="i == addMyMaterial.get('myMaterial').value.length - 1"
-                type="button"
-                [disabled]="!addMyMaterial.valid"
-                (click)="onAddRow()"
+              <button *ngIf="i == addMyMaterial.get('myMaterial').value.length - 1" type="button"
+                [disabled]="!addMyMaterial.valid" (click)="onAddRow()"
                 class="p-t-5 material-icons cursor button-background add-material-btn"
-                [ngClass]="[!addMyMaterial.valid ? 'main-color-faded' : 'main-color']"
-              >
+                [ngClass]="[!addMyMaterial.valid ? 'main-color-faded' : 'main-color']">
                 add_circle
               </button>
             </div>
