--- a/src/app/shared/header/sidenav-list.html
+++ b/src/app/shared/header/sidenav-list.html
@@ -24,7 +24,7 @@
     </ng-container>
   </ng-container>
 
-  <ng-container *ngIf="isPlanAvailable === 1 && accountOwner === 1">
+  <!-- <ng-container *ngIf="isPlanAvailable === 1 && accountOwner === 1">
     <div class="display-flex" [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'active' : '' ">
       <a href="javascript:void(0)" mat-list-item (click)="goToMyPlans()">
         <img src="../../../assets/images/sidenav_payment.svg" alt="" />
@@ -33,7 +33,7 @@
         </span>
       </a>
     </div>
-  </ng-container>
+  </ng-container> -->
 
   <div class="display-flex">
     <a href="javascript:void(0)" mat-list-item (click)="logout()">
