--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -156,9 +156,16 @@ button.active {
   padding: 15px 5px 15px 15px;
   background: #f7f7f7;
 
+  .my-head{
+    padding-left: 0px;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
   .user-name {
     padding-left: 15px;
-    font-weight: 500;
+    font-weight: nomal;
     font-size: 16px;
     cursor: pointer;
   }
