--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -75,7 +75,11 @@
 
       <ng-container matColumnDef="Email">
         <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        <td mat-cell *matCellDef="let element">
+          <div matTooltip="{{ element.email }}" class="limited-character po-p-m p-r-10">
+            {{ element.email }}
+          </div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="Phone No.">
