--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -71,7 +71,7 @@
             <!-- Name Column -->
 
             <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
-              <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fullfillment Date</th>
+              <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fulfillment Date</th>
               <td mat-cell *matCellDef="let element; let i = index" class="fulfillment-date-col">
                 <span class="display-flex">
                   <mat-form-field [ngClass]="isMobile ? 'width-80' : ''" class="border-input" [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)">
