--- a/src/app/features/dashboard/bom/bom-common-table/bom-common-table.component.html
+++ b/src/app/features/dashboard/bom/bom-common-table/bom-common-table.component.html
@@ -85,7 +85,8 @@
                                             class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
                                             <mat-label>Estimated Quantity</mat-label>
                                             <input matInput type="text" formControlName="estimatedQty"
-                                                [value]="item.estimatedQty" autocomplete="off" appTwoDigitDecimaNumber>
+                                                [value]="item.estimatedQty" autocomplete="off"
+                                                (keypress)="isAlphaNumeric($event)" appTwoDigitDecimaNumber>
                                         </mat-form-field>
                                     </td>
                                     <td class="minwidth-200-px">
@@ -93,7 +94,8 @@
                                             class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
                                             <mat-label>Estimated Rate</mat-label>
                                             <input matInput type="text" formControlName="estimatedRate"
-                                                [value]="item.estimatedRate" autocomplete="off" appTwoDigitDecimaNumber>
+                                                [value]="item.estimatedRate" autocomplete="off"
+                                                (keypress)="isAlphaNumeric($event)" appTwoDigitDecimaNumber>
                                         </mat-form-field>
                                     </td>
 
