--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -7,180 +7,178 @@
           <div class="col-md-12">
             <div class="supplier-details-heading-add-address text-center">Supplier Details</div>
           </div>
-          
-          <!-- <div class="row"> -->
-            <!-- Contact person name column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="Contact Person" formControlName="supplierName" required />
-                <mat-error class="mat-error-add-edit-form-modal">Supplier Name is Required</mat-error>
-              </mat-form-field>
-            </div>
 
-            <!-- Phone number column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="number" placeholder="Phone No" formControlName="contactNo" required />
-                <small *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched"
-                  class="form-error-msg"> Phone No is required </small>
-                <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
-                  class="form-error-msg"> Enter Valid Phone No</small>
-              </mat-form-field>
-            </div>
+          <!-- <div class="row"> -->
+          <!-- Contact person name column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="Contact Person" formControlName="supplierName" required />
+              <mat-error class="mat-error-add-edit-form-modal">Supplier Name is Required</mat-error>
+            </mat-form-field>
+          </div>
+
+          <!-- Phone number column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="number" placeholder="Phone No" formControlName="contactNo" required />
+              <small *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched"
+                class="form-error-msg"> Phone No is required </small>
+              <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
+                class="form-error-msg"> Enter Valid Phone No</small>
+            </mat-form-field>
+          </div>
           <!-- </div> -->
 
           <!-- <div class="row"> -->
-            <!-- Email address column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="Email Id" formControlName="email" required />
-                <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
-                  class="form-error-msg"> Email is required </small>
-                <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
-                  class="form-error-msg"> Enter Valid Email</small>
-              </mat-form-field>
-            </div>
+          <!-- Email address column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="Email Id" formControlName="email" required />
+              <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
+                class="form-error-msg"> Email is required </small>
+              <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
+                class="form-error-msg"> Enter Valid Email</small>
+            </mat-form-field>
+          </div>
 
-            <!-- GST number column -->
-            <div class="col-sm-6">
-              <ng-container *ngIf="isInternational === 0; else noInt">
-                <mat-form-field class="border-input w-100">
-                  <input matInput type="text" placeholder="GST No" formControlName="gstNo" required />
-                  <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
-                    class="form-error-msg"> GST No is required </small>
-                  <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
-                    class="form-error-msg"> Enter Valid GST No</small>
-                </mat-form-field>
+          <!-- GST number column -->
+          <div class="col-sm-6">
+            <ng-container *ngIf="isInternational === 0; else noInt">
+              <mat-form-field class="border-input w-100">
+                <input matInput type="text" placeholder="GST No" formControlName="gstNo" required />
+                <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
+                  class="form-error-msg"> GST No is required </small>
+                <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                  class="form-error-msg"> Enter Valid GST No</small>
+              </mat-form-field>
+            </ng-container>
+            <ng-template #noInt>
+              <mat-form-field class="border-input w-100">
+                <input matInput type="text" placeholder="GST No" formControlName="gstNo" />
+                <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                  class="form-error-msg"> Enter Valid GST No</small>
+              </mat-form-field>
+            </ng-template>
+          </div>
+          <!-- </div> -->
+
+          <!-- <div class="row p-t-20"> -->
+          <!-- Select address link column -->
+          <div class="col-xs-6" (click)="openAddressDialog()">
+            <div [ngClass]="[AddressValid ? 'select-address-tag' : 'select-address-tag-disabled']">Select Address
+            </div>
+          </div>
+
+          <!-- reset link column -->
+          <div class="col-xs-6" (click)="reset()">
+            <div class="reset-form-tag">Reset</div>
+          </div>
+          <!-- </div> -->
+
+          <!-- <div class="row p-t-20"> -->
+          <!-- Address line 1 column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="Address Line1" #FormaddressLine1 formControlName="addressLine1"
+                required />
+              <small *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched"
+                class="form-error-msg">
+                Address Line1 is required
+              </small>
+              <small *ngIf="FormaddressLine1.value.length > 120 && form.controls['addressLine1'].touched"
+                class="form-error-msg">
+                Address should be less than 120 characters
+              </small>
+            </mat-form-field>
+          </div>
+
+          <!-- Address line 2 column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="Address Line2" #FormaddressLine2
+                formControlName="addressLine2" />
+              <small *ngIf="form.controls['addressLine2'].hasError('pattern') && form.controls['addressLine2'].touched"
+                class="form-error-msg">
+                Enter Valid Address Line 2</small>
+              <small *ngIf="FormaddressLine2.value.length > 120 && form.controls['addressLine2'].touched"
+                class="form-error-msg">
+                Address should be less than 120 characters
+              </small>
+            </mat-form-field>
+          </div>
+          <!-- </div> -->
+
+          <!-- <div class="row"> -->
+          <!-- country code column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100">
+              <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
+                <div class="display-flex">
+                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
+                    [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
+                    (keydown)="$event.stopPropagation()" />
+                  <button mat-button matSuffix mat-icon-button>
+                    <mat-icon>search</mat-icon>
+                  </button>
+                </div>
+                <mat-select-trigger>
+                  <span
+                    matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
+                      class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                    <span class="p-r-5 fontsize-12-px">{{ selectedCountry && selectedCountry.name }}</span>
+                  </span>
+                </mat-select-trigger>
+                <mat-option
+                  *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
+                  [value]="country" selected="trade.isAttatched"><span><img class="width-17 p-r-10"
+                      [src]="country.imageUrl" alt="" />
+                    <span matTooltip="{{ country.name }}"
+                      class="limited-character universal p-r-5">{{ country.name }}</span>
+                    <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                  </span>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <!-- PinCode column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="Pincode" #pincode formControlName="pinCode"
+                (input)="getPincode($event)" required />
+              <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
+                class="form-error-msg"> Pincode is required </small>
+              <ng-container *ngIf="form.controls['pinCode'].touched">
+                <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg"> Enter Valid Pincode </small>
               </ng-container>
-              <ng-template #noInt>
-                <mat-form-field class="border-input w-100">
-                  <input matInput type="text" placeholder="GST No" formControlName="gstNo" />
-                  <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
-                    class="form-error-msg"> Enter Valid GST No</small>
-                </mat-form-field>
-              </ng-template>
-            </div>
-          <!-- </div> -->
-
-          <!-- <div class="row p-t-20"> -->
-            <!-- Select address link column -->
-            <div class="col-xs-6" (click)="openAddressDialog()">
-              <div [ngClass]="[AddressValid ? 'select-address-tag' : 'select-address-tag-disabled']">Select Address
-              </div>
-            </div>
-
-            <!-- reset link column -->
-            <div class="col-xs-6" (click)="reset()">
-              <div class="reset-form-tag">Reset</div>
-            </div>
-          <!-- </div> -->
-
-          <!-- <div class="row p-t-20"> -->
-            <!-- Address line 1 column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="Address Line1" #FormaddressLine1 formControlName="addressLine1"
-                  required />
-                <small
-                  *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched"
-                  class="form-error-msg">
-                  Address Line1 is required
-                </small>
-                <small *ngIf="FormaddressLine1.value.length > 120 && form.controls['addressLine1'].touched"
-                  class="form-error-msg">
-                  Address should be less than 120 characters
-                </small>
-              </mat-form-field>
-            </div>
-
-            <!-- Address line 2 column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="Address Line2" #FormaddressLine2
-                  formControlName="addressLine2" />
-                <small
-                  *ngIf="form.controls['addressLine2'].hasError('pattern') && form.controls['addressLine2'].touched"
-                  class="form-error-msg">
-                  Enter Valid Address Line 2</small>
-                <small *ngIf="FormaddressLine2.value.length > 120 && form.controls['addressLine2'].touched"
-                  class="form-error-msg">
-                  Address should be less than 120 characters
-                </small>
-              </mat-form-field>
-            </div>
+            </mat-form-field>
+          </div>
           <!-- </div> -->
 
           <!-- <div class="row"> -->
-            <!-- country code column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100">
-                <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
-                  <div class="display-flex">
-                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
-                      [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
-                      (keydown)="$event.stopPropagation()" />
-                    <button mat-button matSuffix mat-icon-button>
-                      <mat-icon>search</mat-icon>
-                    </button>
-                  </div>
-                  <mat-select-trigger>
-                    <span
-                      matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
-                        class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                      <span class="p-r-5 fontsize-12-px">{{ selectedCountry && selectedCountry.name }}</span>
-                    </span>
-                  </mat-select-trigger>
-                  <mat-option
-                    *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
-                    [value]="country" selected="trade.isAttatched"><span><img class="width-17 p-r-10"
-                        [src]="country.imageUrl" alt="" />
-                      <span matTooltip="{{ country.name }}"
-                        class="limited-character universal p-r-5">{{ country.name }}</span>
-                      <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
-                    </span>
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
+          <!-- City column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="City" formControlName="city" required />
+              <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched"
+                class="form-error-msg"> City is required </small>
+              <small *ngIf="form.controls['city'].hasError('pattern') && form.controls['city'].touched"
+                class="form-error-msg"> Enter Valid City</small>
+            </mat-form-field>
+          </div>
 
-            <!-- PinCode column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="Pincode" #pincode formControlName="pinCode"
-                  (input)="getPincode($event)" required />
-                <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
-                  class="form-error-msg"> Pincode is required </small>
-                <ng-container *ngIf="form.controls['pinCode'].touched">
-                  <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg"> Enter Valid Pincode </small>
-                </ng-container>
-              </mat-form-field>
-            </div>
-          <!-- </div> -->
+          <!-- State column -->
+          <div class="col-sm-6">
+            <mat-form-field class="border-input w-100">
+              <input matInput type="text" placeholder="State" formControlName="state" required />
+              <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched"
+                class="form-error-msg"> State is required </small>
+              <small *ngIf="form.controls['state'].hasError('pattern') && form.controls['state'].touched"
+                class="form-error-msg"> Enter Valid State</small>
+            </mat-form-field>
+          </div>
 
-          <!-- <div class="row"> -->
-            <!-- City column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="City" formControlName="city" required />
-                <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched"
-                  class="form-error-msg"> City is required </small>
-                <small *ngIf="form.controls['city'].hasError('pattern') && form.controls['city'].touched"
-                  class="form-error-msg"> Enter Valid City</small>
-              </mat-form-field>
-            </div>
-
-            <!-- State column -->
-            <div class="col-sm-6">
-              <mat-form-field class="border-input w-100">
-                <input matInput type="text" placeholder="State" formControlName="state" required />
-                <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched"
-                  class="form-error-msg"> State is required </small>
-                <small *ngIf="form.controls['state'].hasError('pattern') && form.controls['state'].touched"
-                  class="form-error-msg"> Enter Valid State</small>
-              </mat-form-field>
-            </div>
-
-            <!-- <div class="col-sm-6"></div> -->
+          <!-- <div class="col-sm-6"></div> -->
           <!-- </div> -->
         </div>
 
@@ -192,7 +190,7 @@
             </button>
           </div>
         </div>
-        
+
       </form>
     </div>
   </div>
