--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -6,7 +6,8 @@
       <div class="add-user-img suppliers">
         <img src="../../../../assets/images/supplier-background.png" alt="BuildSupply_Logo" />
         <p>You haven't added any supplier yet. <br /> Please add one to continue.</p>
-        <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">Add First Supplier</button>
+        <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">Add
+          First Supplier</button>
         <br />
         <p><br />Or</p>
 
@@ -14,15 +15,16 @@
           <div class="mr-3 p-t-10">
             <span class="cursor-pointer">
               <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2 cursor-pointer w-45" />
-              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a>
+              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download
+                Supplier Template</a>
             </span>
           </div>
 
           <div class="mr-3 p-t-10 cursor-pointer">
-            <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" style="display: none"
-              multiple (change)="uploadExcel($event.target.files)"/>
+            <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+              style="display: none" multiple (change)="uploadExcel($event.target.files)" />
             <label for="fileDropRef" class="cursor-pointer upload-template" style="color: #000015e6">
-              <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" /> 
+              <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" />
               Upload Supplier Template
             </label>
           </div>
@@ -37,23 +39,28 @@
       <div class="row align-items-center">
         <div class="col-md-3 col-sm-4 col-xs-6 small-screen-left-padding search-col">
           <mat-form-field class="example-form-field border-input search-form-input">
-            <input matInput placeholder="Search Suppliers" type="search" (keyup)="applyFilter($event.target.value)" #searchVal />
+            <input matInput placeholder="Search Suppliers" type="search" (keyup)="applyFilter($event.target.value)"
+              #searchVal />
             <button mat-button matSuffix mat-icon-button>
               <mat-icon>search</mat-icon>
             </button>
           </mat-form-field>
         </div>
         <div class="col-md-9 col-sm-8 col-xs-6 actions-col">
-          <div [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10'">
+          <div
+            [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10'">
             <div class="text-right d-flex justify-content-end align-items-center" appDnd>
               <div class="mr-3 cursor-pointer">
                 <span class="cursor-pointer">
                   <img *ngIf="!showResponsiveDesignIcons" src="assets/images/download-bom.svg" alt="download"
-                    class="img-fluid mr-2 cursor-pointer width-18" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"/>
+                    class="img-fluid mr-2 cursor-pointer width-18"
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')" />
                   <img *ngIf="showResponsiveDesignIcons" src="assets/images/excel-download-res.svg" alt="download"
-                    class="img-fluid mr-2 cursor-pointer width-100 mobile-icons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"/>
+                    class="img-fluid mr-2 cursor-pointer width-100 mobile-icons"
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')" />
 
-                  <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+                  <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons"
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
                     Download Supplier Template
                   </a>
                 </span>
@@ -64,14 +71,17 @@
                   style="display: none" multiple (change)="uploadExcel($event.target.files)" />
 
                 <label for="fileDropRef" class="cursor-pointer upload-template">
-                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 width-18 cursor-pointer" />
-                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 width-100 mobile-icons cursor-pointer" />
+                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload-bom.svg" alt="upload"
+                    class="img-fluid mr-2 width-18 cursor-pointer" />
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload"
+                    class="img-fluid mr-2 width-100 mobile-icons cursor-pointer" />
                   <a *ngIf="!showResponsiveDesignIcons" style="color: #222222"> Upload Supplier Template </a>
                 </label>
               </div>
 
               <div [ngClass]="isMobile ? 'sm-btn1' : ''">
-                <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white add-supplier-button">Add Supplier</button>
+                <button mat-raised-button (click)="addSupplier()"
+                  class="main-background-color main-button color-white add-supplier-button">Add Supplier</button>
               </div>
             </div>
           </div>
@@ -81,7 +91,7 @@
       <!-- all suppliers data table structure -->
       <ng-container *ngIf="dataSourceTemp && dataSourceTemp.length > 0">
         <div class="supplier-details-table-div add-unique-container mat-elevation-z8" *ngIf="!noSearchResults">
-          
+
           <table mat-table [dataSource]="dataSource" class="supplier-data-tbl">
             <!-- Supplier name Column -->
             <ng-container matColumnDef="suppliername">
@@ -93,43 +103,43 @@
                 </span>
               </td>
             </ng-container>
-  
+
             <!-- Supplier email Column -->
             <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef>Email</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="p-l-20">Email</th>
+              <td mat-cell *matCellDef="let element" class="p-l-20">
                 {{ element.email }}
               </td>
             </ng-container>
-  
+
             <!-- Contact number Column -->
             <ng-container matColumnDef="contactNo">
-              <th mat-header-cell *matHeaderCellDef>Contact No.</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="p-l-20">Contact No.</th>
+              <td mat-cell *matCellDef="let element" class="p-l-20">
                 {{ element.contactNo }}
               </td>
             </ng-container>
-  
+
             <!-- Status Column -->
             <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef>Status</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="p-l-20">Status</th>
+              <td mat-cell *matCellDef="let element" class="p-l-20">
                 <ng-container *ngIf="element.status == 0"> Active </ng-container>
                 <ng-container *ngIf="element.status == 1"> Inactive </ng-container>
               </td>
             </ng-container>
-  
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
         </div>
       </ng-container>
-      
+
       <div class="no-suppliers" *ngIf="noSearchResults">
         <img src="../../../../assets/images/supplier-background.png" alt="BuildSupply_Logo" />
         <p>No search results found</p>
       </div>
-      
+
 
     </div>
   </ng-container>
