--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -198,7 +198,7 @@
                   <div class="tooltip-info-body">
                     <div class="display-flex justify-content-space-between gray-bottom-border" *ngFor="let cost of this.poTableData[m].otherCostInfo">
                       <span class="text-semi-bold noborder-bottom">{{ cost.otherCostName }}</span
-                      ><span>{{ cost.otherCostAmount }}%</span>
+                      ><span>{{ cost.otherCostAmount }}</span>
                     </div>
                   </div>
                 </div>
