--- a/src/app/features/user-feedback/user-feedback.component.html
+++ b/src/app/features/user-feedback/user-feedback.component.html
@@ -2,10 +2,10 @@
   <div class="container text-webkit-center">
     <div class="row background-white-color border-radius-10 p-20 mt-5 width-60">
       <div class="col-md-12 text-center">
-        <h2 class="p-r-10 p-t-10 p-b-20">We Love feedback!</h2>
+        <h2 class="p-r-10 p-t-10 p-b-20">We love feedback!</h2>
         <form #userFBForm="ngForm" (ngSubmit)="onSubmit(userFBForm)">
           <div class="col-xs-12 custom-slider">
-            <p class="text-left">How Happy are you with Material Manager?*</p>
+            <p class="text-left">How happy are you with Material Manager?*</p>
             <mat-slider required ngModel class="width-99" name="How Happy are you with Material Manager?" [max]="5" [min]="1" [step]="1" [thumbLabel]="true" [tickInterval]="true"> </mat-slider>
           </div>
           <div class="col-xs-12 custom-slider">
